# redis-serde

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: lint.yml  publish.yml  semantic-pr.yml  test.yml
tests/: de.rs  ser.rs  serde.rs
